# bloom-legacy

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .gqlgen.yml  .travis.yml  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  SECURITY.md  azure-pipelines.yml  bloom.default.json  bloom.default.sane  bloom.go  bloom.template.sane  book.toml  diesel.toml  go.mod  go.sum  mkdocs.yml  pubspec.yaml  schema.graphql
_old/bitflow/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bitflow.default.json  bitflow.default.sane  bitflow.go  defaults.toml
_old/bitflow/cli/: version.go  worker.go
_old/bitflow/dl/: download.go  magnet.go
_old/bitflow/scripts/: release.sh
_old/bitflow/src/: error.rs  log.rs
_old/bitflow/worker/: config.go
bloom/api/: Cargo.toml
bloom/api/src/: app.rs  main.rs
bloom/drive/: Cargo.toml
bloom/drive/sql_requests/: folder_children.sql  path.sql
bloom/drive/src/: lib.rs  reactors.rs  validators.rs
bloom/gallery/: Cargo.toml
bloom/gallery/src/: lib.rs  validators.rs
bloom/kernel/: Cargo.toml
bloom/kernel/src/: config.rs  error.rs  lib.rs  log.rs
bloom/notes/: Cargo.toml
core/: .gitignore  .gqlgen.yml  Cargo.toml  Makefile  accounts.go  admin.go  auth.go  billing.go  calculator.go  calendar.go  contacts.go  core.go  errors.go  go.mod  go.sum  groups.go  messages.go  notes.go  preferences.go  schema.graphql  users.go  version.go
core/api/: client.go  const.go  const_dev.go
core/api/model/: billing_plan.go  bytes.go  group.go  int64.go  models_gen.go  user.go
core/bloom/accounts/: accounts.go  complete_registration.go  messages.go  sign_out.go  sing_in.go  start_registration.go  validators.go  verify_registration.go
core/bloom/api_messages/: Cargo.toml
core/bloom/auth/: Cargo.toml  auth.go  complete_registration.go  messages.go  sign_out.go  sing_in.go  start_registration.go  validators.go  verify_registration.go
core/bloom/calculator/: calc.go  calc_test.go
core/bloom/calendar/: Cargo.toml  create_event.go  delete_event.go  messages.go  update_event.go  validators.go
core/bloom/const/: Cargo.toml
core/bloom/contacts/: Cargo.toml  create_contact.go  delete_contact.go  list_contacts.go  messages.go  models.go
core/bloom/error/: Cargo.toml
core/bloom/gui_messages/: Cargo.toml
core/bloom/kernel/: home.go  messages.go  sqlite_types.go
core/bloom/messages/: Cargo.toml
core/bloom/models/: Cargo.toml
core/bloom/notes/: Cargo.toml  create_note.go  delete_note.go  list.go  list_archived.go  list_notes.go  messages.go  models.go
core/bloom/validators/: Cargo.toml
core/bloomd/: main.go
core/consts/: accounts.go  const.go
core/coreutil/: device.go
core/db/: db.go
core/db/migration/: version.go  version1.go
core/domain/admin/: fetch_dashboard_data.go  messages.go
core/domain/billing/: add_payment_method.go  chanfe_default_payment_method.go  create_plan.go  delete_plan.go  fetch_group_profile.go  fetch_plans.go  fetch_profile.go  messages.go  models.go  modesl.go  remove_payment_method.go  update_plan.go  update_subscription.go
core/domain/calculator/: calc.go  calc_test.go  messages.go
core/domain/calendar/: const.go  const_test.go  create_event.go  delete_event.go  list_events.go  messages.go  models.go  update_event.go  validators.go
core/domain/contacts/: const.go  const_test.go  create_contact.go  delete_contact.go  list_contacts.go  messages.go  models.go  update_contact.go  utils.go
core/domain/groups/: accept_invitation.go  cancel_invitation.go  create_group.go  decline_invitation.go  delete_group.go  delete_group_objects.go  fetch_group_details.go  fetch_group_members.go  fetch_groups.go  fetch_members.go  fetch_my_invitations.go  find_groups.go  invitaiton_signature.go  invitation_signature.go  invite.go  invite_user.go  invite_users.go  messages.go  models.go  quit_group.go  (+3 more)
core/ffi/: calculator.go  errors.go  ffi.go  main.go  notes.go
core/libs/: Cargo.toml  README.md
core/messages/: messages_gen.go  models_gen.go
core/rpc/: go.mod
core/server/: main.go
core/src/: lib.rs
crates/mimesniff-rs/: Cargo.toml  LICENSE.txt
crates/rust-dotenv/: .travis.yml  Cargo.toml
crates/sendgrid-rs/: Cargo.toml  README.md
desktop/native/: Cargo.toml  Makefile  README.md  package.json
libs/mimesniff-rs/: Cargo.toml
mobile/core_ffi/: Cargo.toml  Makefile
server/: .dockerignore  .env.example  .gitignore  .gqlgen.yml  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  bloom.default.json  bloom.default.sane  bloom.go  bloom.sane.template  bloom.template.sane  go.mod  go.sum  main.go  schema.graphql
server/admin/: Cargo.toml
server/api/: Cargo.toml  consts.go  context.go  error.go  helloworld.go  index.go  middleswares.go  not_found.go  response.go  run.go  util.go  validators.go
server/app/: const.go  doc.go  version.go
server/assets/: basic_password.txt
server/billing/: Cargo.toml
server/bitflow/: Cargo.toml
server/calendar/: Cargo.toml
server/cli/: root.go
server/cmd/: migrations.go  root.go  server.go  version.go
server/config/: config.go
server/contacts/: Cargo.toml
server/db/: db.go  doc.go  sqlx.go
server/domain/: doc.go
server/drive/: Cargo.toml
server/driver/: cache.go  default_email_template.go  doc.go  mailer.go
server/errors/: errors.go  errors_test.go
server/gallery/: Cargo.toml
server/http/: const.go  doc.go  handlers.go  middleswares.go  not_found.go  run.go  server.go  utils.go
server/kernel/: Cargo.toml
server/migrations/: 20200116113003_reboot.down.sql  20200116113003_reboot.up.sql  20200123212002_init_groups.down.sql  20200123212002_init_groups.up.sql  20200123212019_init_billing.down.sql  20200123212019_init_billing.up.sql
server/music/: Cargo.toml
server/notes/: Cargo.toml
server/phaser/: Cargo.toml
server/public/: index.html
server/server/: middleswares.go
server/src/: app.rs  main.rs  server.rs
server/version/: version.go
server_old/: .gitignore  Cargo.toml  LICENSE.txt  Makefile
server_old/scripts/: db_backup.sh  print_schema.sh  release.sh
(+3953 files in other folders)
