# [package]
# name = "kernel"
# version = "0.1.3"
# authors = ["z0mbie42 <sylvain@kerkour.com>"]
# edition = "2018"
# homepage = "https://bloom.sh"
# repository = "https://github.com/bloom42/kernel.git"
# description = "Open internet services"
# keywords = ["bloom"]
# license = "MPL-2.0"
# publish = false


[profile.release]
# for error tracking
debug = true
lto = true


[workspace]
members = [
    "crates/diesel_as_jsonb",
    "crates/sendgrid-rs",
    "crates/bcrypt-rs",
    "crates/hex-rs",
    "crates/eventsourcing-rs",
    "crates/mimesniff-rs",
    "crates/diesel-derive-enum",
    "crates/diesel-enum-derive",
    "crates/rust-dotenv",

    "server/kernel",
    "server/drive",
    "server/api",
    "server/notes",
    "server/contacts",
    "server/gallery",
    "server/music",
    "server/bitflow",
]
