[package]
name = "bloom_core"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { package = "bloom_auth", path = "bloom/auth" }
messages = { package = "bloom_messages", path = "bloom/messages" }

serde = { version = "1.0", features = ["derive"] }


[workspace]
members = [
    "bloom/auth",
    "bloom/messages",
    "bloom/error",
]
