[package]
name = "api"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"

[dependencies]
eventsourcing = { path = "../../crates/eventsourcing-rs" }

kernel = { path = "../kernel" }
notes = { path = "../notes" }
contacts = { path = "../contacts" }
drive = { path = "../drive" }
gallery = { path = "../gallery" }
music = { path = "../music" }



actix-web = "0.7.19"
actix = "0.7"
rusoto_core = "0.37"
rusoto_s3 = "0.37"
num_cpus = "1.0"
http = "0.1.0"
sentry = "0.15.2"
dotenv = "^0.13.0"
sentry-actix = "0.15.2"
