[package]
name = "gallery"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
publish = false

[dependencies]
kernel = { path = "../kernel" }
diesel_as_jsonb = { path = "../../crates/diesel_as_jsonb" }
eventsourcing = { path = "../../crates/eventsourcing-rs" }
drive = { path = "../drive" }

