[package]
name = "kernel"
version = "0.1.3"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"


[dependencies]
diesel_as_jsonb = { path = "../../crates/diesel_as_jsonb" }
bcrypt = { path = "../../crates/bcrypt-rs" }
eventsourcing = { path = "crates/eventsourcing-rs" }

failure = "0.1.5"
actix-web = "0.7.19"
actix = "0.7"
rusoto_s3 = "0.37"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
tokio-timer = "0.2"
diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json", "r2d2", "uuidv07"] }
dotenv = "^0.13.0"
futures = "0.1"
serde_json = "1.0"
image = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6"

# emails
handlebars = "2.0.0-beta.1"
lettre = "0.8"
lettre_email = "0.8"

# logging
slog = "2.4"
slog-json = "2.3"
log = "0.4"
slog-scope = "4.1"
