[package]
name = "mimesniff"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
homepage = "https://opensource.bloom.sh"
description = "Determine the Content-Type of the given data"
keywords = ["bloom", "content-type", "mime", "mimesniff"]
license = "Apache-2.0"

[dependencies]
