[package]

name = "dotenv"
version = "0.13.0"
authors = [
	"Noemi Lapresta <noemi.lapresta@gmail.com>",
	"Craig Hills <chills@gmail.com>",
	"Mike Piccolo <mfpiccolo@gmail.com>",
	"Alice Maz <alice@alicemaz.com>",
	"Sean Griffin <sean@seantheprogrammer.com>",
	"Adam Sharp <adam@sharplet.me>",
]
readme = "README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/apiraino/rust-dotenv"
repository = "https://github.com/apiraino/rust-dotenv"
description = "A `dotenv` implementation for Rust"
edition = "2018"

[dependencies]
failure = { version = "0.1.5", default-features = false, features = ["derive"] }
lazy_static = "1.3.0"
regex = "1.1.2"

clap = { version = "2.32.0", optional = true }

[dev-dependencies]
tempdir = "0.3.7"

[features]
backtrace = ["failure/backtrace"]
cli = ["clap"]
default = ["backtrace"]

[[bin]]
name = "dotenv"
required-features = ["cli"]
