[package]
name = "bloom_desktop_native"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"


[lib]
name = "bloom_desktop_native"
crate-type = ["cdylib"] # required by neon

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
lazy_static = "1.4.0"
neon-serde = "0.2.0"
bloom_desktop_core = { path = "bloom/core" }


[workspace]
members = [
    ".",
    "bloom/core",
]
