[package]
name = "bloom_desktop_native"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"


[lib]
name = "bloom_desktop_native"
crate-type = ["cdylib"] # required by neon

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
bloom_core = { path = "../../core" }
gui_messages = { package = "bloom_gui_messages", path = "../../core/bloom/gui_messages" }
bloom_auth = { path = "../../core/bloom/auth" }

neon = "0.3.1"
lazy_static = "1.4.0"
neon-serde = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
crypto42 = { version = "0.5", git = "https://gitlab.com/bloom42/libs/crypto42" }
