[package]
name = "mimesniff"
version = "0.3.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"
homepage = "https://gitlab.com/bloom42/server"
repository = "https://gitlab.com/bloom42/server.git"
description = "Determine the Content-Type of the given data"
keywords = ["bloom", "content-type", "mime", "mimesniff"]
license = "Apache-2.0"

[dependencies]
mime = "0.3"
# url = "^1.2"
