[package]
name = "api"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"

[dependencies]
eventsourcing = { path = "../../crates/eventsourcing-rs" }
dotenv = { path = "../../crates/rust-dotenv" }


kernel = { path = "../kernel" }
notes = { path = "../notes" }
contacts = { path = "../contacts" }
drive = { path = "../drive" }
# gallery = { path = "../gallery" }
# music = { path = "../music" }
bitflow = { path = "../bitflow" }


actix-web = "1.0.0-beta.2"
actix = "0.8"
actix-http = "0.1"
rusoto_core = "0.38"
rusoto_s3 = "0.38"
num_cpus = "1.0"
http = "0.1.0"
sentry = "0.15.2"
sentry-actix = "0.15.2"
