[package]
name = "api"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
eventsourcing = { path = "../rust_crates/eventsourcing-rs" }
dotenv = { path = "../rust_crates/rust-dotenv" }


kernel = { path = "../kernel" }
notes = { path = "../notes" }
contacts = { path = "../contacts" }
drive = { path = "../drive" }
gallery = { path = "../gallery" }
music = { path = "../music" }
bitflow = { path = "../bitflow" }
phaser = { path = "../phaser" }


actix-web = "1.0.0-beta.4"
actix = "0.8"
rusoto_core = "0.38"
rusoto_s3 = "0.38"
num_cpus = "1.0"
http = "0.1.0"
sentry = "0.15.2"
sentry-actix = "0.15.2"
