[package]
name = "gallery"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
publish = false

[dependencies]
kernel = { path = "../kernel" }
diesel_as_jsonb = { path = "../../crates/diesel_as_jsonb" }
eventsourcing = { path = "../../crates/eventsourcing-rs" }
drive = { path = "../drive" }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json", "r2d2", "uuidv07"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "0.7.19"
actix = "0.7"
futures = "0.1"
rusoto_s3 = "0.38"
rusoto_core = "0.38"
rusoto_credential = "0.17"
