[package]
name = "kernel"
version = "0.1.3"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"


[dependencies]
diesel_as_jsonb = { path = "../../crates/diesel_as_jsonb" }
bcrypt = { path = "../../crates/bcrypt-rs" }
eventsourcing = { path = "../../crates/eventsourcing-rs" }
mimesniff = { path = "../../crates/mimesniff-rs" }
hex = { path = "../../crates/hex-rs" }
dotenv = { path = "../../crates/rust-dotenv" }


failure = "0.1.5"
actix-web = "0.7.19"
actix = "0.7"
rusoto_s3 = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
tokio-timer = "0.2"
diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json", "r2d2", "uuidv07"] }
futures = "0.1"
image = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6"
base64 = "0.10.1"
mime = "0.3"

# emails
handlebars = "2.0.0-beta.1"
lettre = "0.9.0"
lettre_email = "0.9.0"

# logging
slog = "2.4"
slog-json = "2.3"
log = { version = "0.4", features = ["std"] }
slog-scope = "4.1"
