[package]
name = "bloom_auth"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom_messages = { path = "../messages" }
bloom_error = { path = "../error", features = ["reqwest", "crypto42"]}

crypto42 = { version = "0.5", git = "https://gitlab.com/bloom42/libs/crypto42" }
uuid = { version = "0.7", features = ["serde", "v4"] }
# reqwest = { version = "0.9", features = ["default-tls-vendored"] }
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }

base64 = "0.10"
