[package]
name = "bloom_contacts"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom_messages = { path = "../messages" }
bloom_error = { path = "../error", features = ["reqwest", "rusqlite"] }
bloom_models = { path = "../models" }
bloom_validators = { path = "../validators" }


rusqlite = { version = "0.20", features = ["bundled", "chrono", "serde_json"] }
chrono = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
dirs = "2.0"
