[package]
name = "bloom_error"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom_messages = { path = "../messages" }

crypto42 = { version = "0.5", git = "https://gitlab.com/bloom42/libs/crypto42" }

failure = "0.1"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
