[package]
name = "bloom_error"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom_messages = { path = "../messages" }

failure = "0.1"

crypto42 = { version = "*", git = "https://gitlab.com/bloom42/libs/crypto42", optional = true }
reqwest = { version = "*", optional = true }
lettre = { version = "*", optional = true }
lettre_email = { version = "*", optional = true }
serde_json = { version = "*", optional = true }
walkdir = { version = "*", optional = true }
zip = { version = "*", optional = true }
url = { version = "*", optional = true }
diesel = { version = "*", optional = true }
image = { version = "*", optional = true }
actix = { version = "*", optional = true }
actix-http = { version = "*", optional = true }
r2d2 = { version = "*", optional = true }


[features]
default = []

