[package]
name = "bloom_messages"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom_models = { path = "../models" }

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
