[package]
name = "caldyn"
version = "0.4.3"
authors = ["Luthaf <luthaf@luthaf.fr>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Luthaf/caldyn"
homepage = "https://github.com/Luthaf/caldyn"
documentation = "https://docs.rs/caldyn/"
description = """
Dynamic evaluation of mathematical expressions
"""

# [dev-dependencies]
# rustyline = "4"
# shellexpand = "1"

[badges]
travis-ci = {repository = "Luthaf/caldyn"}
codecov = {repository = "Luthaf/caldyn"}
maintenance = { status = "actively-developed" }
